# mcp-client

./: .env.example  pyproject.toml
src/: launch.py
src/mcp_client/: main.py
src/open_webui/: pipeline.py  proxy_server.py
