[project]
name = "mcp-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Yu Cheng",email = "yucheng@mirle.com.tw"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "fastmcp (>=2.1.2,<3.0.0)",
    "llama-index (>=0.12.30,<0.13.0)",
    "llama-index-tools-mcp (>=0.1.1,<0.2.0)",
    "llama-index-llms-ollama (>=0.5.4,<0.6.0)",
]

[tool.poetry]
packages = [{include = "mcp_client", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
